# fff.nvim

./: Cargo.toml  README.md  flake.nix
crates/fff-emacs/: Cargo.toml
crates/fff-emacs/src/: main.rs
doc/: fff.nvim.txt
emacs/: fff.el  fff.elc
