[package]
name = "fff-emacs"
version = "0.1.0"
edition = "2024"
description = "Emacs helper process for fff-core"
license = "MIT"

[features]
default = []
zlob = ["fff-core/zlob"]

[dependencies]
mimalloc.workspace = true

fff-core = { path = "../fff-core" }
fff-query-parser = { path = "../fff-query-parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
